--- a/WebContent/accommodationLists/accommodationDetail.html
+++ b/WebContent/accommodationLists/accommodationDetail.html
@@ -46,31 +46,20 @@
                 <img src = "../../images/company/호텔/서울/강남,역삼,삼성/신라스테이_삼성/신라스테이_삼성_메인.png" alt= "신라스테이 삼성"><br>
             </div>
             <div class="main-info">
-                4성급<br>
-                신라스테이 삼성<br>
+                <h1>신라스테이 삼성</h1>
                 서울 강남구 삼성동 168-3<br>
                 <nav class='review'>
                     ★9.0 <a href="">리뷰 보러 가기</a>
                 </nav>
             </div>
         </section>
-        
-        <section class='event'>
-            <h1>숙소 이벤트</h1>
-            <nav>
-                <a href="">더보기</a><br>
-            </nav>
-            <ul><li>함께 먹어 더 행복한 아침(조식 2인 패키지)</li>
-                <li>내가 정한 체크인 시간 (24시간 스테이)</li>
-                <li>완벽한 힐링 (조식 2인 + 24시간 투숙)</li>
-            </ul>
-        </section>
 
         <section class='dateChange'>
-            11.05 목 ~ 11.12 목 (6박)
-            <nav>
-                <a href="">날짜 변경</a>
-            </nav>
+            <div>
+                예약 날짜<br>
+                <input type="date"> ~ 
+                <input type="date">
+            </div>
         </section>
 
         <table class= 'information'>
