--- a/WebContent/admin/index.html
+++ b/WebContent/admin/index.html
@@ -3,16 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../css/reset.css" type="text/css">
-    <link rel="stylesheet" href="../css/admin/index.css" type="text/css">
+    <link rel="icon" href="/images/logo.png">
+    <link rel="stylesheet" href="/css/reset.css" type="text/css">
+    <link rel="stylesheet" href="/css/layout.css">
+    <link rel="stylesheet" href="/css/admin/index.css" type="text/css">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     <title>관리자 페이지</title>
 </head>
 <body>
-    <header id="header" class="header">
-        <h1>나는 헤더</h1>
+    <header class="sec-header-page">
+        <section class="header-sec pcHeader">
+            <div class="header-logo">
+                <h1><a class="teum-logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
+            </div>
+            <div>
+                <ul class="main-menu">
+                    <li class="header_search"><input type="text"><a href=""><i class="fas fa-search"></i></a></li>
+                    <li><a href="">제안하기</a></li>
+                    <li><a href="">예약내역</a></li>
+                    <li><a href="">더보기</a></li>
+                    <li class="mypage"><a href="">로그인</a>
+                        <div class="mega-menu">
+                            <ul>
+                                <li><a href="">내정보</a></li>
+                                <li><a href="">제안내역</a></li>
+                                <li><a href="">찜한 숙소</a></li>
+                                <li><a href="">로그아웃</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </header>
-    <section>
+    <section class="container-sec">
         <div class="container">
             <h1>관리자 페이지에 오신 것을 환영합니다.</h1>
             <ul>
@@ -22,6 +46,49 @@
                 <li><a href=""><i class="fas fa-headphones"></i><span>고객센터</span></a></li>
             </ul>
         </div>
+    </section>
+    <section>
+        <footer id="footer" class="footer">
+            <div>
+                <ul>
+                    <li>
+                        <a href="">회사소개</a>
+                        <span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
+                    </li>
+                    <li>
+                        <a href="">이용약관</a>
+                        <span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
+                    </li>
+                    <li>
+                        <a href="">개인정보처리방침</a>
+                        <span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
+                    </li>
+                    <li>
+                        <a href="">사업자정보확인</a>
+                        <span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
+                    </li>
+                    <li>
+                        <a href="">틈 마케팅센터</a>
+                        <span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
+                    </li>
+                    <li>
+                        <a href="">액티비티 호스트센터</a>
+                        <span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
+                    </li>
+                    <li><a href="">콘텐츠산업진흥법에의한 표시</a></li>
+                </ul>
+
+                <p><b>고객행복센터 1577-8282</b> 오전 09:00 ~ 오후18:00</p>
+
+                <address>
+                    <span>(주)TEUM</span>
+                    주소 : 서울특별시 종로구 인사동길 12 대일빌딩 15층
+                    <br />대표이사 : 신중언 | 사업자등록번호 777-11-45678 <br />통신판매번호 : 2020-서울강남-12345 | 관광사업자 등록번호 : 제
+                    1324-55호 <br />전화번호 : 010-1111-2222 <br />전자우편주소 : teum@teum.co.kr <br />Copyright TEUM COMPANY Corp. All rights
+                    reserved.
+                </address>
+            </div>
+        </footer>
     </section>
 </body>
 </html>
