--- a/WebContent/user/offer/edit.html
+++ b/WebContent/user/offer/edit.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/images/logo.png">
     <link rel="stylesheet" href="/css/reset.css" type="text/css">
     <link rel="stylesheet" href="/css/layout.css">
     <link rel="stylesheet" href="/css/user/offer/edit.css"  type="text/css">
@@ -41,13 +42,6 @@
     <section class="container-sec">
         <div class="container">
             <main id="main" class="main">
-                <!-- <div class="breadcrumb">
-                    <ul class="breadcrumb-list">
-                        <li><i class="fas fa-home"></i>HOME ▶</li>
-                        <li>역제안 등록</li>
-                    </ul>
-                </div> -->
-                <!-- <div class="banner-img"></div> -->
                 <div class="ment-container">
                     <div class="ment-title">Teum</div>
                     <div class="ment-content">
