--- a/WebContent/user/offer/reg.html
+++ b/WebContent/user/offer/reg.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/images/틈로고index.png">
+    <link rel="icon" href="/images/logo.png">
     <link rel="stylesheet" href="/css/reset.css" type="text/css" />
     <link rel="stylesheet" href="/css/layout.css">
     <link rel="stylesheet" href="/css/user/offer/reg.css" type="text/css" />
