--- a/WebContent/admin/customerService/notice/list.html
+++ b/WebContent/admin/customerService/notice/list.html
@@ -13,11 +13,11 @@
     <title>noticeList</title>
 </head>
 <body>
-     <header class="sec-header">
+	<header class="sec-header">
         <div id="header" class="header">
             <div class="header-h1">
                 <h1><a class="teum-logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
-            </div>
+            </div class="active">
             <div>
                 <ul class="main-menu">
                     <li class="header-search"><input type="text"><a href=""><i class="fas fa-search"></i></a></li>
