user page mod 1212

--- a/WebContent/user/userInfo/goodsOnMyList.html
+++ b/WebContent/user/userInfo/goodsOnMyList.html
@@ -48,8 +48,8 @@
                 <ul>
                     <li><a href=""><i class="fas fa-exclamation-circle"></i>&nbsp;&nbsp;회원정보수정</a></li>
                     <li><a href=""><i class="far fa-calendar-check"></i>&nbsp;&nbsp;예약관리</a></li>
-                    <li class="active"><a href=""><i class="far fa-question-circle"></i>&nbsp;&nbsp;제안신청관리</a></li>
-                    <li><a href=""><i class="far fa-question-circle"></i>&nbsp;&nbsp;찜한상품조회</a></li>
+                    <li><a href=""><i class="far fa-question-circle"></i>&nbsp;&nbsp;제안신청관리</a></li>
+                    <li class="active"><a href=""><i class="far fa-question-circle"></i>&nbsp;&nbsp;찜한상품조회</a></li>
                 </ul>
             </aside>
             <main id="main" class="main">
@@ -61,7 +61,83 @@
                 </div>
                 <section class="picked-item-sec">
                     <h1>찜한 상품</h1>
-                    <div>
+                    <div class="snip1368">
+                        <img src="../../images/company/호텔/서울/신사,청담,압구정/리베라/리베라_메인.jpg" alt="">
+                        <h3>예약하기</h3>
+                        <figcaption>
+                            <div class="icons"><a href="#"><i class="ion-social-reddit-outline"></i></a>
+                              <a href="#"> <i class="ion-social-twitter-outline"></i></a>
+                              <a href="#"> <i class="ion-social-vimeo-outline"></i></a>
+                            </div>
+                          </figcaption>
+                        <div class="description-item">
+                            <p>라마다 호텔</p>
+                            <P>9.1 추천해요 (201)</P>
+                            <p>강남구 역삼동</p>
+                        </div>
+                        <div class="item-price">
+                            <div>
+                                <p>숙박</p>
+                                <p>예약특가</p>
+                                <p>30,000원</p>
+                            </div>
+                        </div>
+                        <div class="hovered-item-bg">
+                        </div>
+                    </div>
+                    <div class="snip1368">
+                        <img src="../../images/company/호텔/서울/신사,청담,압구정/리베라/리베라_메인.jpg" alt="">
+                        <h3>예약하기</h3>
+                        <figcaption>
+                            <div class="icons"><a href="#"><i class="ion-social-reddit-outline"></i></a>
+                              <a href="#"> <i class="ion-social-twitter-outline"></i></a>
+                              <a href="#"> <i class="ion-social-vimeo-outline"></i></a>
+                            </div>
+                          </figcaption>
+                        <div class="description-item">
+                            <p>라마다 호텔</p>
+                            <P>9.1 추천해요 (201)</P>
+                            <p>강남구 역삼동</p>
+                        </div>
+                        <div class="item-price">
+                            <div>
+                                <p>숙박</p>
+                                <p>예약특가</p>
+                                <p>30,000원</p>
+                            </div>
+                        </div>
+                        <div class="hovered-item-bg">
+                        </div>
+                    </div>
+
+                    <!-- <div>
+                        <img src="../../images/company/호텔/서울/신사,청담,압구정/리베라/리베라_메인.jpg" alt="">
+                        <div class="description-item">
+                            <p>라마다 호텔</p>
+                            <P>9.1 추천해요 (201)</P>
+                            <p>강남구 역삼동</p>
+                        </div>
+                        <div class="item-price">
+                            <div>
+                                <p>숙박</p>
+                                <p>예약특가</p>
+                                <p>30,000원</p>
+                            </div>
+                        </div>
+                    </div> -->
+
+                    <!-- <figure class="snip1368">
+                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample30.jpg" alt="sample30" />
+                        <h3>Max Conversion</h3>
+                        <figcaption>
+                          <div class="icons"><a href="#"><i class="ion-social-reddit-outline"></i></a>
+                            <a href="#"> <i class="ion-social-twitter-outline"></i></a>
+                            <a href="#"> <i class="ion-social-vimeo-outline"></i></a>
+                          </div>
+                        </figcaption>
+                      </figure> -->
+
+                    <!-- <div>
                         <table>
                             <thead>
                                 <tr>
@@ -94,7 +170,7 @@
                                 </tr>
                             </tbody>
                         </table>
-                    </div>
+                    </div> -->
                 </section>
             </main>
         </div>
