--- a/WebContent/admin/accommodations/applyList.html
+++ b/WebContent/admin/accommodations/applyList.html
@@ -105,6 +105,7 @@
                                     <td class="col-m">위치</td>
                                     <td class="col-m">등록일</td>
                                     <td class="col-m">연락처</td>
+                                    <td class="col-sm">업체종류</td>
                                     <td class="col-s"><input type="checkbox"></td>
                                     <td class="col-s"><input type="checkbox"></td>
                                 </tr>
@@ -117,6 +118,7 @@
                                     <td>서울시 송파구</td>
                                     <td>2020-11-01</td>
                                     <td>010-2774-5678</td>
+                                    <td>호텔</td>
                                     <td><input type="checkbox"></td>
                                     <td><input type="checkbox"></td>
                                 </tr>
@@ -127,6 +129,7 @@
                                     <td>서울시 송파구</td>
                                     <td>2020-11-05</td>
                                     <td>010-3462-8452</td>
+                                    <td>호텔</td>
                                     <td><input type="checkbox"></td>
                                     <td><input type="checkbox"></td>
                                 </tr>
@@ -137,6 +140,7 @@
                                     <td>서울시 광진구</td>
                                     <td>2020-11-14</td>
                                     <td>010-2365-5678</td>
+                                    <td>호텔</td>
                                     <td><input type="checkbox"></td>
                                     <td><input type="checkbox"></td>
                                 </tr>
@@ -147,10 +151,12 @@
                                     <td>서울시 서초구</td>
                                     <td>2020-11-23</td>
                                     <td>010-3863-1263</td>
+                                    <td>호텔</td>
                                     <td><input type="checkbox"></td>
                                     <td><input type="checkbox"></td>
                                 </tr>
                                 <tr>
+                                    <td></td>
                                     <td></td>
                                     <td></td>
                                     <td></td>
