--- a/WebContent/user/offer/pay.html
+++ b/WebContent/user/offer/pay.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     <script src="/js/user/offer/pay.js"></script>
-    <title>(개인)결제 페이지</title>
+    <title>TEUM | 틈을 채우다</title>
 </head>
 <body>
     <header class="sec-header-page">
@@ -46,8 +46,8 @@
                 <div class="breadcrumb">
                     <ul class="breadcrumb-list">
                         <li><i class="fas fa-home"></i>&nbsp;&nbsp;HOME&nbsp;&nbsp;&nbsp;<i class="fas fa-angle-right"></i></li>
-                        <li>&nbsp;&nbsp;&nbsp;???&nbsp;&nbsp;&nbsp;<i class="fas fa-angle-right"></i></li>
-                        <li>&nbsp;&nbsp;&nbsp;???&nbsp;&nbsp;&nbsp;</li>
+                        <li>&nbsp;&nbsp;&nbsp;예약하기&nbsp;&nbsp;&nbsp;<i class="fas fa-angle-right"></i></li>
+                        <li>&nbsp;&nbsp;&nbsp;결제하기&nbsp;&nbsp;&nbsp;</li>
                     </ul>
                 </div>
                 <form action="" class="reservation-form">
