--- a/WebContent/company/reverseOffer/detail.html
+++ b/WebContent/company/reverseOffer/detail.html
@@ -64,7 +64,7 @@
                     <div class="cliper-btn next-btn">
                         <i class="fas fa-angle-right"></i>
                     </div>
-                    <h1>고객으로부터 받은 제안목록</h1>  
+                    <h1>고객으로부터 받은 제안 목록</h1>  
                     <div class="proposal-container">
                         <div class="proposal-info">
                             <h2>제안정보</h2>
@@ -112,58 +112,32 @@
                     </div>
                 </section>
                 <section class="offer-sec">
-                    <h1>고객에게 보낸 숙소 목록</h1>
+                    <h1>고객에게 역제안을 보낸 룸 목록</h1>
                     <form class="offer-form">
                         <section>
                             <div class="offer-container">
                                 <div class="offer-img-container">
-                                    <!-- <a href=""><img src="http://lorempixel.com/370/220/"></a> -->
                                     <a href=""><img src="../../images/company/호텔/서울/강남,역삼,삼성/라마다호텔/슈페리얼더블/슈페리얼더블1.jpg" alt=""></a>
                                 </div>
                                 <div class="offer-detail-container">
                                     <div class="offer-room">
-                                        <span>스탠다드 더블</span>
+                                        <span>스위트룸</span>
+                                    </div>
+                                    <div class="offer-bed-count">
+                                        <div>침대개수</div>
+                                        <div>3</div>
+                                    </div>
+                                    <div class="offer-max-headcount">
+                                        <div>최대 수용인원</div>
+                                        <div>2</div>
                                     </div>
                                     <div class="offer-price">
                                         <div>가격</div>
-                                        <div>128,260원</div>
+                                        <div>258,220원</div>
                                     </div>
-                                    <div class="offer-detail-link">객실 자세히 보기</div>
-                                </div>
-                            </div>
-                        </section>
-                        <section>
-                            <div class="offer-container">
-                                <div class="offer-img-container">
-                                    <a href=""><img src="../../images/company/호텔/서울/강남,역삼,삼성/라마다호텔/슈페리얼트윈/슈페리얼트윈2.jpg"></a>
-                                </div>
-                                <div class="offer-detail-container">
-                                    <div class="offer-room">
-                                        <span>스탠다드 더블</span>
+                                    <div class="highlight-btn-container">
+                                        <input type="button" class="highlight-btn" value="예약이 가능한 방입니다">
                                     </div>
-                                    <div class="offer-price">
-                                        <div>가격</div>
-                                        <div>128,260원</div>
-                                    </div>
-                                    <div class="offer-detail-link">객실 자세히 보기</div>
-                                </div>
-                            </div>
-                        </section>
-                        <section>
-                            <div class="offer-container">
-                                <div class="offer-img-container">
-                                    <a href=""><img src="../../images/company/호텔/서울/강남,역삼,삼성/신라스테이_삼성/스탠다드_더블/신라스테이_삼성_스탠다드더블2.jpg"></a>
-                                </div>
-                                <div class="offer-detail-container">
-                                    <div class="offer-room">
-                                        <span>스탠다드 더블</span>
-                                    </div>
-                                    <div class="offer-price">
-                                        <div>가격</div>
-                                        <div>128,260원</div>
-                                    </div>
-                                    <div class="offer-detail-link">객실 자세히 보기</div>
-                                    <!-- <div><i class="fas fa-caret-right"></i></div> -->
                                 </div>
                             </div>
                         </section>
