--- a/WebContent/company/reverseOffer/reg.html
+++ b/WebContent/company/reverseOffer/reg.html
@@ -64,7 +64,7 @@
                     <div class="cliper-btn next-btn">
                         <i class="fas fa-angle-right"></i>
                     </div>
-                    <h1>고객으로부터 받은 제안목록</h1>  
+                    <h1>고객으로부터 받은 제안 목록</h1>  
                     <div class="proposal-container">
                         <div class="proposal-info">
                             <h2>제안정보</h2>
@@ -72,6 +72,10 @@
                                 <li>
                                     <div>날짜</div>
                                     <div>2020.12.12 ~ 2020.12.15</div>
+                                </li>
+                                <li>
+                                    <div>종류</div>
+                                    <div>호텔</div>
                                 </li>
                                 <li>
                                     <div>위치</div>
@@ -95,6 +99,10 @@
                                     <div>2020.12.07 ~ 2020.12.08</div>
                                 </li>
                                 <li>
+                                    <div>종류</div>
+                                    <div>호텔</div>
+                                </li>
+                                <li>
                                     <div>위치</div>
                                     <div>서울시 강남구</div>
                                 </li>
@@ -112,7 +120,7 @@
                     </div>
                 </section>
                 <section class="offer-sec">
-                    <h1>승인가능한 숙소 정보</h1>
+                    <h1>역제안이 가능한 방 목록</h1>
                     <form class="offer-form">
                         <section>
                             <div class="radio-container">
@@ -121,18 +129,27 @@
                             </div>
                             <div class="offer-container">
                                 <div class="offer-img-container">
-                                    <!-- <a href=""><img src="http://lorempixel.com/370/220/"></a> -->
                                     <a href=""><img src="../../images/company/호텔/서울/강남,역삼,삼성/라마다호텔/슈페리얼더블/슈페리얼더블1.jpg" alt=""></a>
                                 </div>
                                 <div class="offer-detail-container">
                                     <div class="offer-room">
                                         <span>스탠다드 더블</span>
                                     </div>
+                                    <div class="offer-bed-count">
+                                        <div>침대개수</div>
+                                        <div>2</div>
+                                    </div>
+                                    <div class="offer-max-headcount">
+                                        <div>최대 수용인원</div>
+                                        <div>4</div>
+                                    </div>
                                     <div class="offer-price">
                                         <div>가격</div>
                                         <div>128,260원</div>
                                     </div>
-                                    <div class="offer-detail-link">객실 자세히 보기</div>
+                                    <div class="highlight-btn-container">
+                                        <input type="button" class="highlight-btn" value="예약이 가능한 방입니다">
+                                    </div>
                                 </div>
                             </div>
                         </section>
@@ -147,13 +164,23 @@
                                 </div>
                                 <div class="offer-detail-container">
                                     <div class="offer-room">
-                                        <span>스탠다드 더블</span>
+                                        <span>VIP 커플룸(PC포함)</span>
+                                    </div>
+                                    <div class="offer-bed-count">
+                                        <div>침대개수</div>
+                                        <div>1</div>
+                                    </div>
+                                    <div class="offer-max-headcount">
+                                        <div>최대 수용인원</div>
+                                        <div>2</div>
                                     </div>
                                     <div class="offer-price">
                                         <div>가격</div>
-                                        <div>128,260원</div>
+                                        <div>500,260원</div>
                                     </div>
-                                    <div class="offer-detail-link">객실 자세히 보기</div>
+                                    <div class="highlight-btn-container">
+                                        <input type="button" class="highlight-btn" value="예약이 가능한 방입니다">
+                                    </div>
                                 </div>
                             </div>
                         </section>
@@ -168,14 +195,23 @@
                                 </div>
                                 <div class="offer-detail-container">
                                     <div class="offer-room">
-                                        <span>스탠다드 더블</span>
+                                        <span>스위트룸</span>
+                                    </div>
+                                    <div class="offer-bed-count">
+                                        <div>침대개수</div>
+                                        <div>3</div>
+                                    </div>
+                                    <div class="offer-max-headcount">
+                                        <div>최대 수용인원</div>
+                                        <div>2</div>
                                     </div>
                                     <div class="offer-price">
                                         <div>가격</div>
-                                        <div>128,260원</div>
+                                        <div>258,220원</div>
                                     </div>
-                                    <div class="offer-detail-link">객실 자세히 보기</div>
-                                    <!-- <div><i class="fas fa-caret-right"></i></div> -->
+                                    <div class="highlight-btn-container">
+                                        <input type="button" class="highlight-btn" value="예약이 가능한 방입니다">
+                                    </div>
                                 </div>
                             </div>
                         </section>
