--- a/WebContent/user/userInfo/proposalList.html
+++ b/WebContent/user/userInfo/proposalList.html
@@ -124,13 +124,20 @@
                                 </div>
                                 <div class="offer-detail-container">
                                     <div class="offer-room">
-                                        <span>스탠다드 더블</span>
+                                        <span>스위트룸</span>
+                                    </div>
+                                    <div class="offer-bed-count">
+                                        <div>침대개수</div>
+                                        <div>3</div>
+                                    </div>
+                                    <div class="offer-max-headcount">
+                                        <div>최대 수용인원</div>
+                                        <div>2</div>
                                     </div>
                                     <div class="offer-price">
                                         <div>가격</div>
-                                        <div>128,260원</div>
+                                        <div>258,220원</div>
                                     </div>
-                                    <div class="offer-detail-link">객실 자세히 보기</div>
                                     <div class="submit-btn-container">
                                         <input type="submit" class="submit-btn" value="승인하기">
                                     </div>
@@ -151,13 +158,20 @@
                                 </div>
                                 <div class="offer-detail-container">
                                     <div class="offer-room">
-                                        <span>스탠다드 더블</span>
+                                        <span>스위트룸</span>
+                                    </div>
+                                    <div class="offer-bed-count">
+                                        <div>침대개수</div>
+                                        <div>3</div>
+                                    </div>
+                                    <div class="offer-max-headcount">
+                                        <div>최대 수용인원</div>
+                                        <div>2</div>
                                     </div>
                                     <div class="offer-price">
                                         <div>가격</div>
-                                        <div>128,260원</div>
+                                        <div>258,220원</div>
                                     </div>
-                                    <div class="offer-detail-link">객실 자세히 보기</div>
                                     <div class="submit-btn-container">
                                         <input type="submit" class="submit-btn" value="승인하기">
                                     </div>
